# yahac

./: .gitignore  404.html  CONTRIBUTING.md  PKGBUILD  README.md  README_PACKAGING.md  README_SYNC.md  SECURITY.md  index.html  pyproject.toml  setup.py  sitemap.xml  sync_version.py  version_info.py  yahac.spec
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: appimage.yml  arch.yml  aur-source.yml  aur.yml  bandit.yml  deb.yml  debian.yml  gh-page.yml  package-smoke.yml  product-hunt-reminder.yml  release-orchestrator.yml  release.yml  rpm.yml  ruff.yml  trivy.yml
automation/: index.html
compatibility/: index.html
configuration/: index.html
debian/: changelog  control  rules  yahac.desktop  yahac.install
development/: index.html
docs/: mkdocs.yml  zensical.toml
docs/docs/: automation.md  compatibility.md  configuration.md  development.md  index.md  installation.md  mqtt.md  sensors.md
icons/: generate_icon.py
installation/: index.html
mqtt/: index.html
packaging/aur/: PKGBUILD  PKGBUILD.source  README.md
packaging/debian/: README.md  changelog  control  io.github.dseichter.yahac.desktop  io.github.dseichter.yahac.metainfo.xml  rules  yahac.install
packaging/rpm/: README.md  yahac.spec
search/: search_index.json
sensors/: index.html
src/: api.py  gui.py  gui_config.py  gui_mainframe.py  gui_sensors.py  gui_traymenu.py  ha_helper.py  helper.py  icons.py  logging_config.py  mqtt.py  mqtt_topic.py  requirements.txt  settings.py  yahac.py
tests/: test_helper.py  test_mqtt.py  test_mqtt_topic.py
